# step_labeller

./: .gitignore  .gitmodules  CMakeLists.txt  Gazer.pro.user.e6c6827  README.md  StepLabeller.pro  capture_thread.cpp  capture_thread.h  filetable.cpp  filetable.h  main.cpp  mainwindow.cpp  mainwindow.h  playercontrols.cpp  playercontrols.h  popupwindow.cpp  popupwindow.ui  steptable.cpp  steptable.h  ui_popupwindow.h
docs/: usage.md
src/: CMakeLists.txt  capture_thread.cpp  capture_thread.h  main.cpp  mainwindow.cpp  playercontrols.cpp  playercontrols.h  popupwindow.cpp  popupwindow.h
